deploy/k8s/service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: pdn-shield-direct
  labels:
    role: direct-entry
spec:
  type: LoadBalancer
  selector:
    app: pdn-shield
  externalTrafficPolicy: Cluster
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
